# Cultivator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  premake5.lua
Code/: App.cc  App.hh  AppPlatform.hh  Assert.hh  Intrinsics.hh  PCH.cc  PCH.hh  Platform.hh  Window.hh  WindowBase.hh
Code/App/: App.cc  App.hh  AppContext.hh  AppContextBase.hh  AppPlatformBase.hh  Window.hh  WindowBase.hh
Code/Graphics/: CellularAutomatonRenderer.cc  CellularAutomatonRenderer.hh
Code/Graphics/Shaders/: BriansBrain.frag.hlsl  DayAndNight.frag.hlsl  GameOfLife.frag.hlsl  Highlife.frag.hlsl  LifeWithoutDeath.frag.hlsl  Neighborhood.hlsli  Presentation.frag.hlsl  ScreenQuad.vert.hlsl  Seeds.frag.hlsl
Code/Platform/Vulkan/: Vulkan.API.hh  Vulkan.Adapter.cc  Vulkan.Adapter.hh  Vulkan.GraphicsPlatform.cc  Vulkan.GraphicsPlatform.hh  Vulkan.Surface.hh  Vulkan.SurfaceBase.hh  Vulkan.SwapChain.cc  Vulkan.SwapChain.hh  Windows.Surface.cc  Windows.Surface.hh
Code/Platform/Windows/: Windows.API.hh  Windows.App.cc  Windows.ErrorBox.cc  Windows.Utils.hh  Windows.Window.cc  Windows.Window.hh
Code/Utils/: Array.hh  Assert.hh  File.hh  Intrinsics.hh  Rectangle.hh  Singleton.hh
Code/Windows/: Windows.API.hh  Windows.App.cc  Windows.ErrorWindow.cc  Windows.Utils.hh  Windows.Window.cc
src/: Main.cpp  Precompiled.hpp
src/app/: Application.hpp  Application.win.cpp  Window.cpp  Window.hpp  Window.win.cpp
src/graphics/: AutomatonRenderer.cpp  AutomatonRenderer.hpp
src/graphics/shaders/: BriansBrain.frag.hlsl  CMakeLists.txt  DayAndNight.frag.hlsl  GameOfLife.frag.hlsl  Highlife.frag.hlsl  LifeWithoutDeath.frag.hlsl  Neighborhood.hlsli  Presentation.frag.hlsl  ScreenQuad.vert.hlsl  Seeds.frag.hlsl
src/graphics/vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandList.cpp  CommandList.hpp  DeviceContext.cpp  DeviceContext.hpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  Surface.cpp  Surface.hpp  Surface.win.cpp  Util.hpp  (+6 more)
src/util/: ImplStorage.hpp  RectSize.hpp  SharedLibrary.hpp  SharedLibrary.win.cpp  Util.cpp  Util.hpp
(+5 files in other folders)
